[package]
name = "russh-util"
version = "0.52.0"
edition = "2024"
rust-version = "1.85"
description = "Runtime abstraction utilities for russh."
documentation = "https://docs.rs/russh-util"
homepage = "https://github.com/warp-tech/russh"
license = "Apache-2.0"
repository = "https://github.com/warp-tech/russh"

[dependencies]
tokio = { workspace = true, features = ["sync", "macros", "time"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"
web-time = "1"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "rt"] }
